<resources>
    <string name="app_name">ExercicioSeguros</string>
    <string name="service_name">Seguros XPTO</string>
    <string name="contact_us">Entre em contato</string>
    <string name="need_help">Precisa de ajuda?</string>
    <string name="monthly_discount">Desconto de 5% ao assinar esse mês!</string>
    <string name="news">Novidades</string>
    <string name="real_estate">Imóveis</string>
    <string name="automobiles">Automóveis</string>
    <string name="services">Serviços</string>
</resources>